--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="viewport" content="width=device-width, initial-scale=1.0">
-        <title>C.E. Truffaut</title>
+        <title>WebDev Portfolio</title>
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>        
